[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "six-serving-men"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "Six serving men."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["six-serving-men"]

dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
six-serving-men = "six_serving_men.cli:run"

[project.urls]
"Homepage" = "https://github.com/six-serving-men/six-serving-men"